--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,23 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
 }
 
+.App {
+  font-family: 'Inter', sans-serif;
+  position: relative;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
