--- a/src/components/moviesList/MoviesList.css
+++ b/src/components/moviesList/MoviesList.css
@@ -1,13 +1,21 @@
 .movies-list {
-  width: 1060px;
+  width: 1200px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 .movies-list__item {
   position: relative;
-  width: 208px;
+  width: 23%;
   height: auto;
-  padding: 29.5px 28px;
+  padding: 10px;
+  background-color: #fff;
+  margin: 1%;
+  transition: transform 0.5s;
+  box-sizing: border-box;
+}
+.movies-list__item:hover {
+  transform: translateY(-10px);
 }
 .movies-list__item img {
   width: 100%;
@@ -53,16 +61,6 @@
   max-width: 200px;
 }
 
-@media (min-width: 769px) and (max-width: 1060px) {
-  .movies-list {
-    width: 100%;
-  }
-  .movies-list__item {
-    box-sizing: border-box;
-    width: 25%;
-    height: auto;
-  }
-}
 @media (max-width: 768px) {
   .movies-list {
     margin: 40px 10px;
@@ -70,7 +68,7 @@
   }
   .movies-list__item {
     position: relative;
-    width: 50%;
+    width: 48%;
     height: auto;
     padding: 20px 10px;
     box-sizing: border-box;
