--- a/src/components/moviesList/MoviesList.scss
+++ b/src/components/moviesList/MoviesList.scss
@@ -1,13 +1,22 @@
 .movies-list {
-  width: 1060px;
+  width: 1200px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 
   &__item {
     position: relative;
-    width: 208px;
+    width: 23%;
     height: auto;
-    padding: 29.5px 28px;
+    padding: 10px;
+    background-color: #fff;
+    margin: 1%;
+    transition: transform 0.5s;
+    box-sizing: border-box;
+
+    &:hover {
+      transform: translateY(-10px);
+    }
 
     img {
       width: 100%;
@@ -61,18 +70,6 @@
   }
 }
 
-@media (min-width: 769px) and (max-width: 1060px) {
-  .movies-list {
-    width: 100%;
-
-    &__item {
-      box-sizing: border-box;
-      width: 25%;
-      height: auto;
-    }
-  }
-
-}
 
 
 @media (max-width: 768px) {
@@ -83,7 +80,7 @@
 
     &__item {
       position: relative;
-      width: 50%;
+      width: 48%;
       height: auto;
       padding: 20px 10px;
       box-sizing: border-box;
