--- a/src/components/searchForm/SearchForm.css
+++ b/src/components/searchForm/SearchForm.css
@@ -1,47 +1,60 @@
 .search-form {
-  margin-top: 34px;
+  margin: 34px 0;
+  width: 100%;
+}
+.search-form .logo {
+  color: #03759d;
+  font-size: 30px;
+  text-align: left;
+  padding: 0 20px;
 }
 .search-form form {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0 10px;
 }
-.search-form input, .search-form select {
+.search-form input {
   font-family: "Inter", sans-serif;
   font-size: 12px;
-  width: 208px;
-  height: 29px;
-  margin: 0 11px;
+  width: 100%;
+  height: 35px;
+  margin: 40px 10px;
   box-sizing: border-box;
-  border: 1px solid #000;
+  border: 1px solid #03759d;
+  border-radius: 5px;
 }
 .search-form__input {
   padding: 7px 8px;
 }
-.search-form select {
-  padding: 0 8px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-image: url("../../resourses/img/arrow.svg");
-  background-repeat: no-repeat, repeat;
-  background-position: right 12px top 50%, 0 0;
-  background-size: 10px;
-}
-.search-form select::-ms-expand {
-  display: none;
-}
-.search-form select option {
-  border-radius: 0;
-}
 .search-form input::-webkit-input-placeholder {
-  color: #000;
+  color: #03759d;
 }
-.search-form__button {
-  background-color: #48DEFF;
-  border: none;
-  width: 82px;
-  height: 29px;
-  margin: 0 11px;
+
+ul li {
+  position: relative;
+  padding: 10px 20px;
+  margin: 10px 20px;
+  text-align: left;
+  border-radius: 5px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  list-style-type: none;
+  background-color: #03759d;
+  color: #ffffff;
+}
+ul li:after {
+  content: "";
+  background: url("../../resourses/img/fast-forward.png");
+  background-size: 100%;
+  position: absolute;
+  right: 20px;
+  width: 20px;
+  height: 20px;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+ul li:hover:after {
+  opacity: 1;
 }
 
 @media (min-width: 769px) and (max-width: 1060px) {
@@ -55,7 +68,7 @@
 @media (max-width: 768px) {
   .search-form {
     width: 100%;
-    background-color: #D9D9D9;
+    background-color: #fafafc;
     height: 100vh;
     position: fixed;
     z-index: 2;
@@ -70,6 +83,7 @@
   }
   .search-form form {
     flex-wrap: wrap;
+    padding: 0;
   }
   .search-form form input, .search-form form select, .search-form form button {
     width: 100%;
